# web_resume

./: .gitignore  Cargo.toml  README.md
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  switch.rs
frontend/src/pages/: welcome.rs
frontend/src/server_comm/: get_agent.rs  get_fetch.rs  post_agent.rs  post_fetch.rs
