[package]
name = "frontend"
version = "0.1.0"
authors = ["jjpatric <jjpatric@ualberta.ca>"]
edition = "2018"

[dependencies]
yew = {version = "0.17.4"}
yew-router = {version = "0.14.0"}
yewtil = "0.3.2"
stdweb = "0.4.20"
wasm-logger = "0.2.0"
log = "0.4.14"
web-sys = { version = "0.3.4", features = ["console", "Window", "Document", "Element", "Node",
    "HtmlCanvasElement", "HtmlImageElement", "CanvasRenderingContext2d", "DomRect"]}
wasm-bindgen = "0.2.73"
serde = "1"
serde_json = "1"
anyhow = "1"
rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }